# timecard-rust-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  build.rs
.cargo/: config.toml
.github/workflows/: docker-publish.yml
proto/: timecard.proto
src/: client_state.rs  config.rs  http_api.rs  main.rs  socketio_client.rs  socketio_server.rs
src/db/: mod.rs  pool.rs
src/models/: driver.rs  finger_log.rs  ic_log.rs  ic_non_reg.rs  mod.rs  pic_data.rs  tmp_data.rs  vapid_key.rs
src/services/: client.rs  driver.rs  finger_log.rs  ic_log.rs  ic_non_reg.rs  mod.rs  notification.rs  pic_data.rs  test.rs  tmp_data.rs  vapid_key.rs  version.rs
