[package]
name = "timecard-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# gRPC
tonic = "0.12"
tonic-web = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
prost-types = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Base64 encoding for images
base64 = "0.22"

# HTTP client (for external API calls)
reqwest = { version = "0.12", features = ["json"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# HTTP server (for health checks)
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
http = "1"
http-body-util = "0.1"

[build-dependencies]
tonic-build = "0.12"
